--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "esm": "^3.2.25",
     "express": "^4.18.2",
-    "mongoose": "^6.7.3"
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^6.7.3",
+    "mongoose-unique-validator": "^4.0.0"
   }
 }
